made some layouts

--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -20,7 +20,7 @@
     }
     .menuButton{
         display: block;
-        cursor: pointer;
+        pointer-events: auto !important;
 
     }
     .mobileLinks{
